--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "tstp8",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Convert your Typescript project to Pico-8 Lua",
-  "private": true,
+  "private": false,
   "scripts": {
     "build:js": "bun build ./src/declarations/constants.ts --production --target=bun --outfile ./out/constants.js",
     "build:cli": "bun build ./src/index.ts --production --target=bun --external pnpapi --external typescript --outfile ./out/tstp8",
