--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "tstp8",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Convert your Typescript project to Pico-8 Lua",
   "private": false,
   "scripts": {
-    "build:js": "bun build ./src/declarations/constants.ts --production --target=bun --outfile ./out/constants.js",
-    "build:cli": "bun build ./src/index.ts --production --target=bun --external pnpapi --external typescript --outfile ./out/tstp8",
+    "build": "bun build ./src/index.ts --production --target bun --banner \"#!/usr/bin/env bun\" --external pnpapi --external typescript --outfile ./out/tstp8",
     "dev": "bun run ./src/index.ts"
   },
   "types": "./src/declarations/pico8-global.d.ts",
@@ -26,13 +25,14 @@
   },
   "devDependencies": {
     "@types/bun": "latest",
-    "typescript-to-lua": "^1.33.0"
+    "type-fest": "^5.2.0"
   },
   "peerDependencies": {
     "typescript": "^5.9.3"
   },
   "dependencies": {
     "oxc-transform": "^0.97.0",
-    "zod": "^4.1.12"
+    "zod": "^4.1.12",
+    "typescript-to-lua": "^1.33.0"
   }
 }
