--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tstp8",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "description": "Convert your Typescript project to Pico-8 Lua",
   "keywords": [
     "typescript",
@@ -37,14 +37,12 @@
   },
   "devDependencies": {
     "@types/bun": "latest",
-    "type-fest": "^5.2.0"
-  },
-  "peerDependencies": {
-    "typescript": "^5.9.3"
-  },
-  "dependencies": {
+    "type-fest": "^5.2.0",
     "oxc-transform": "^0.97.0",
     "zod": "^4.1.12",
     "typescript-to-lua": "^1.33.0"
+  },
+  "peerDependencies": {
+    "typescript": "^5.9.3"
   }
 }
